test/corpus/commands.txt
================================================================================
Simple MsgBox command
================================================================================

MsgBox, Hello

--------------------------------------------------------------------------------

(source_file
  (command
    name: (command_name)
    (command_arguments)))

================================================================================
MsgBox with string
================================================================================

MsgBox, "Hello World"

--------------------------------------------------------------------------------

(source_file
  (command
    name: (command_name)
    (command_arguments
      (string))))

================================================================================
Command with variable reference
================================================================================

MsgBox, %myVar%

--------------------------------------------------------------------------------

(source_file
  (command
    name: (command_name)
    (command_arguments
      (variable_ref
        (identifier)))))

================================================================================
Command with builtin variable reference
================================================================================

MsgBox, %A_ScriptDir%

--------------------------------------------------------------------------------

(source_file
  (command
    name: (command_name)
    (command_arguments
      (variable_ref
        (builtin_variable)))))

================================================================================
Send command
================================================================================

Send, {Enter}

--------------------------------------------------------------------------------

(source_file
  (command
    name: (command_name)
    (command_arguments)))

================================================================================
Sleep command
================================================================================

Sleep, 1000

--------------------------------------------------------------------------------

(source_file
  (command
    name: (command_name)
    (command_arguments)))

================================================================================
Run command
================================================================================

Run, notepad.exe

--------------------------------------------------------------------------------

(source_file
  (command
    name: (command_name)
    (command_arguments)))

================================================================================
SetTimer command
================================================================================

SetTimer, MyLabel

--------------------------------------------------------------------------------

(source_file
  (command
    name: (command_name)
    (command_arguments)))

================================================================================
Gosub command
================================================================================

Gosub, MyLabel

--------------------------------------------------------------------------------

(source_file
  (command
    name: (command_name)
    (command_arguments)))
